@@ -9,10 +9,9 @@ package rero.ircfw;
          the bulk of this chore is handled by User List Info though.
  */
 
-import java.util.*;
-
-import rero.ircfw.data.GenericMode;
 import rero.ircfw.interfaces.ChannelDataWatch;
+
+import java.util.*;
 
 public class InternalDataList
 {
@@ -20,41 +19,45 @@ public class InternalDataList
     protected HashMap users = new HashMap(); /* key=<string>, value=<User> */
     protected MyUser myInformation = new MyUser();
     protected HashMap channels = new HashMap(); /* key=<string> value=<Channel> */
-    protected HashMap sync     = new HashMap(); /* key=<string> value=<ChannelDataWatch> */
+    protected HashMap sync = new HashMap(); /* key=<string> value=<ChannelDataWatch> */
 
-    protected HashMap wasOn    = new HashMap(); /* key=String value=Set hashmap containing nick->channel mappings for all users who quit.  Upon its first access though the value is removed. */
+    protected HashMap wasOn =
+        new HashMap(); /* key=String value=Set hashmap containing nick->channel mappings for all users who quit.  Upon its first access though the value is removed. */
 
-    protected UserMode umode   = new UserMode("ohv", "@%+");
+    protected UserMode umode = new UserMode("ohv", "@%+");
 
     protected HashMap iSupport = new HashMap();
 
     public void reset()
     {
-       myNickname    = "<Unknown>";
-       users         = new HashMap();
-       myInformation = new MyUser();
-       channels      = new HashMap();
-       umode         = new UserMode("ohv", "@%+");
-       iSupport      = new HashMap();
+        myNickname = "<Unknown>";
+        users = new HashMap();
+        myInformation = new MyUser();
+        channels = new HashMap();
+        umode = new UserMode("ohv", "@%+");
+        iSupport = new HashMap();
     }
 
     public Set getChannelsFromPriorLife(String nick)
     {
-       Set temp = (Set)wasOn.get(nick);
-       wasOn.remove(temp);
-       return temp;
+        Set temp = (Set) wasOn.get(nick);
+        wasOn.remove(temp);
+        return temp;
     }
 
     public HashMap getSupportInfo() { return iSupport; }
+
     public void addSupportInfo(String key, String value) { iSupport.put(key, value); }
 
     public String getMyNick() { return myNickname; }
+
     public User getMyUser() { return getUser(getMyNick()); }
-    
+
     public UserMode getPrefixInfo() { return umode; }
+
     public void setPrefixInfo(String modes, String chars) { umode = new UserMode(modes, chars); }
 
-    public void setMyNick(String n) { myNickname = n; }     
+    public void setMyNick(String n) { myNickname = n; }
 
     public MyUser getMyUserInformation() { return myInformation; }
 
@@ -65,174 +68,159 @@ public class InternalDataList
 
     public ChannelDataWatch getChannelDataWatch(Channel ch)
     {
-        return (ChannelDataWatch)sync.get(ch.getName().toUpperCase());
+        return (ChannelDataWatch) sync.get(ch.getName().toUpperCase());
     }
 
-    /************************************************************************/
-  
+    /**
+     * ********************************************************************
+     */
+
     public LinkedList nickCompleteAll(String pnick, String channel)
     {
-       LinkedList rv = new LinkedList();
+        LinkedList rv = new LinkedList();
 
-       if (getChannel(channel) != null)
-       {
-          Set users = getChannel(channel).getAllUsers();
+        if (getChannel(channel) != null) {
+            Set users = getChannel(channel).getAllUsers();
 
-          Iterator i = users.iterator();
-          while (i.hasNext())
-          {
-             User temp = (User)i.next();
-             if (temp.getNick().length() >= pnick.length())
-             {
-                if (temp.getNick().toLowerCase().substring(0, pnick.length()).equals(pnick.toLowerCase()))
-                {
-                   rv.addFirst(temp.getNick());
+            Iterator i = users.iterator();
+            while (i.hasNext()) {
+                User temp = (User) i.next();
+                if (temp.getNick().length() >= pnick.length()) {
+                    if (temp.getNick().toLowerCase().substring(0, pnick.length()).equals(pnick.toLowerCase())) {
+                        rv.addFirst(temp.getNick());
+                    } else
+                    if (temp.getNick().toLowerCase().indexOf(pnick.toLowerCase()) > -1 && (!temp.getNick().toLowerCase().equals(getMyNick().toLowerCase())))
+                    {
+                        rv.addLast(temp.getNick());
+                    }
                 }
-                else if (temp.getNick().toLowerCase().indexOf(pnick.toLowerCase()) > -1 && (!temp.getNick().toLowerCase().equals(getMyNick().toLowerCase())))
-                {
-                   rv.addLast(temp.getNick());
-                }
-             }
-          }
-       }
+            }
+        }
 
-       rv.addLast(pnick);
+        rv.addLast(pnick);
 
-       return rv;
+        return rv;
     }
 
     public String nickComplete(String pnick, String channel)
     {
-       if (getChannel(channel) == null)
-       {
-          return pnick;
-       }
+        if (getChannel(channel) == null) {
+            return pnick;
+        }
 
-       Set users = getChannel(channel).getAllUsers();
+        Set users = getChannel(channel).getAllUsers();
 
-       if (isUser(pnick) && users.contains(getUser(pnick)))
-       {
-          return pnick;
-       }
+        if (isUser(pnick) && users.contains(getUser(pnick))) {
+            return pnick;
+        }
 
-       String possible = null;
+        String possible = null;
 
-       Iterator i = users.iterator();
-       while (i.hasNext())
-       {
-          User temp = (User)i.next();
-          if (temp.getNick().length() >= pnick.length())
-          {
-             if (temp.getNick().toLowerCase().substring(0, pnick.length()).equals(pnick.toLowerCase()))
-             {
-                return temp.getNick();
-             }
+        Iterator i = users.iterator();
+        while (i.hasNext()) {
+            User temp = (User) i.next();
+            if (temp.getNick().length() >= pnick.length()) {
+                if (temp.getNick().toLowerCase().substring(0, pnick.length()).equals(pnick.toLowerCase())) {
+                    return temp.getNick();
+                }
 
-             if (temp.getNick().toLowerCase().indexOf(pnick.toLowerCase()) > -1 && (!temp.getNick().toLowerCase().equals(getMyNick().toLowerCase())))
-             {
-                possible = temp.getNick();
-             }
-          }
-       }
+                if (temp.getNick().toLowerCase().indexOf(pnick.toLowerCase()) > -1 && (!temp.getNick().toLowerCase().equals(getMyNick().toLowerCase())))
+                {
+                    possible = temp.getNick();
+                }
+            }
+        }
 
-       if (possible != null)
-       {
-          return possible;
-       }
+        if (possible != null) {
+            return possible;
+        }
 
-       return pnick;
+        return pnick;
     }
 
     public Collection getAllUsers()
     {
-       return users.values();
+        return users.values();
     }
 
     public String toString()
     {
-       return "[IDL for " + myNickname + " - users: " + users.size() + ", channels:  " + channels.size() + "]";
+        return "[IDL for " + myNickname + " - users: " + users.size() + ", channels:  " + channels.size() + "]";
     }
 
     public InternalDataList()
     {
-       /* probably don't need to do anything */
+        /* probably don't need to do anything */
     }
 
     public boolean isUser(String nickname)
     {
-       return (users.get(nickname) != null);
+        return (users.get(nickname) != null);
     }
 
     public User getUser(String nickname)
     {
-       if (users.get(nickname) == null)
-       {
-           users.put(nickname, new User(nickname));           
-       }
-       return (User)users.get(nickname);
+        if (users.get(nickname) == null) {
+            users.put(nickname, new User(nickname));
+        }
+        return (User) users.get(nickname);
     }
 
     public Set getUsersWithMode(String channel, char mode)
     {
-       return umode.getUsersWithMode(getChannel(channel), mode);
+        return umode.getUsersWithMode(getChannel(channel), mode);
     }
 
     public void QuitNick(String nickname)
     {
-       Channel temp;
+        Channel temp;
 
-       Set oldchannels = new HashSet();
+        Set oldchannels = new HashSet();
 
-       Iterator iter = (new LinkedList(getUser(nickname).getChannels())).iterator();
-       while (iter.hasNext())
-       {
-           temp = (Channel)iter.next();
-           RemoveUser(getUser(nickname), temp);
-           oldchannels.add(temp.getName());
-       }
+        Iterator iter = (new LinkedList(getUser(nickname).getChannels())).iterator();
+        while (iter.hasNext()) {
+            temp = (Channel) iter.next();
+            RemoveUser(getUser(nickname), temp);
+            oldchannels.add(temp.getName());
+        }
 
-       wasOn.put(nickname, oldchannels);
+        wasOn.put(nickname, oldchannels);
 
-       users.remove(nickname);
+        users.remove(nickname);
     }
 
     public void PartNick(String nickname, Channel channel)
     {
-       if (getMyNick().equals(nickname))
-       {
-          Iterator iter =  channel.getAllUsers().iterator();
-          while (iter.hasNext())
-          {
-              User temp = (User)iter.next();
-              temp.getChannelData().remove(channel);
+        if (getMyNick().equals(nickname)) {
+            Iterator iter = channel.getAllUsers().iterator();
+            while (iter.hasNext()) {
+                User temp = (User) iter.next();
+                temp.getChannelData().remove(channel);
 
-              if (temp.getChannelData().size() == 0)
-              {
-                 users.remove(temp); // remove users who are no longer visible
-              }
-          }
+                if (temp.getChannelData().size() == 0) {
+                    users.remove(temp); // remove users who are no longer visible
+                }
+            }
 
-          channel.getAllUsers().clear();
-          channels.remove(channel.getName().toUpperCase());
-       }
+            channel.getAllUsers().clear();
+            channels.remove(channel.getName().toUpperCase());
+        }
 
-       RemoveUser(getUser(nickname), channel);
+        RemoveUser(getUser(nickname), channel);
     }
 
     public void JoinNick(String nickname, String channel)
     {
-       if (getMyNick().equals(nickname))
-       {
-          createChannel(channel);
-       }
+        if (getMyNick().equals(nickname)) {
+            createChannel(channel);
+        }
 
-       getUser(nickname).getChannelData().put(getChannel(channel), new Integer(0));      
-       getChannel(channel).getAllUsers().add(getUser(nickname));
+        getUser(nickname).getChannelData().put(getChannel(channel), new Integer(0));
+        getChannel(channel).getAllUsers().add(getUser(nickname));
 
-       if (getChannelDataWatch(getChannel(channel)) != null)
-       {
-          getChannelDataWatch(getChannel(channel)).userAdded(getUser(nickname));
-       }
+        if (getChannelDataWatch(getChannel(channel)) != null) {
+            getChannelDataWatch(getChannel(channel)).userAdded(getUser(nickname));
+        }
     }
 
     public void ChangeNick(String oldnick, String newnick)
@@ -242,36 +230,32 @@ public class InternalDataList
         // remove the user before the nick is changed in the data structure
         Channel channel;
 
-        Iterator iter =  temp.getChannels().iterator();
-        while (iter.hasNext())
-        {
-            channel = (Channel)iter.next();
+        Iterator iter = temp.getChannels().iterator();
+        while (iter.hasNext()) {
+            channel = (Channel) iter.next();
             channel.getAllUsers().remove(temp);
         }
-    
+
         // change the nick in the data structure
         users.remove(oldnick);
 
-        temp.setNick(newnick);        
+        temp.setNick(newnick);
 
         users.put(newnick, temp);
 
         // re add the user to the channel data structure
-        iter =  temp.getChannels().iterator();
-        while (iter.hasNext())
-        {
-            channel = (Channel)iter.next();
+        iter = temp.getChannels().iterator();
+        while (iter.hasNext()) {
+            channel = (Channel) iter.next();
             channel.getAllUsers().add(temp);
 
-            if (getChannelDataWatch(channel) != null)
-            {
-               getChannelDataWatch(channel).userChanged();
+            if (getChannelDataWatch(channel) != null) {
+                getChannelDataWatch(channel).userChanged();
             }
         }
-   
+
         // change my nickname (if applicable)
-        if (oldnick.equals(getMyNick()))
-        {
+        if (oldnick.equals(getMyNick())) {
             setMyNick(newnick);
         }
     }
@@ -284,34 +268,39 @@ public class InternalDataList
     public void AddUser(String nickname, Channel channel)
     {
         int modes = 0;
- 
-        while (umode.isPrefixChar(nickname.charAt(0)))
-        {
-           modes    = umode.setMode(modes, umode.getModeForDisplay(nickname.charAt(0)));
-           nickname = nickname.substring(1, nickname.length());
+
+        while (umode.isPrefixChar(nickname.charAt(0))) {
+            modes = umode.setMode(modes, umode.getModeForDisplay(nickname.charAt(0)));
+            nickname = nickname.substring(1, nickname.length());
         }
 
         User user = getUser(nickname);
 
-        if (! user.getChannelData().containsKey(channel))
-        {
-           user.getChannelData().put(channel, new Integer(modes));
-           channel.getAllUsers().add(user);
+        // @Serge: when user joins empty channel and obtains +o automatically, he's already present on this channel,
+        // (user.getChannelData().containsKey(channel) returns true on some networks), but without +o,
+        // so we need to update user's mode.
+        // Fix for: http://jirc.hick.org/cgi-bin/bitch.cgi/view.html?7013225
+        if (user.getChannelData().containsKey(channel)) {
+            // only put new mode if it's different
+            if (((Integer) user.getChannelData().get(channel)).intValue() != modes)
+                user.getChannelData().put(channel, new Integer(modes));
+        } else {
+            user.getChannelData().put(channel, new Integer(modes));
+            channel.getAllUsers().add(user);
         }
     }
 
     public Channel getChannel(String channel)
     {
-        return (Channel)channels.get(channel.toUpperCase());
+        return (Channel) channels.get(channel.toUpperCase());
     }
 
     public void createChannel(String channel)
     {
         channels.put(channel.toUpperCase(), new Channel(channel));
 
-        if (getChannelDataWatch(getChannel(channel)) != null)
-        {
-           getChannelDataWatch(getChannel(channel)).createChannel(getChannel(channel));
+        if (getChannelDataWatch(getChannel(channel)) != null) {
+            getChannelDataWatch(getChannel(channel)).createChannel(getChannel(channel));
         }
     }
 
@@ -323,9 +312,8 @@ public class InternalDataList
     public void synchronizeUserPostChange(User user, Channel channel)
     {
         channel.getAllUsers().add(user);
-        if (getChannelDataWatch(channel) != null)
-        {
-           getChannelDataWatch(channel).userChanged();
+        if (getChannelDataWatch(channel) != null) {
+            getChannelDataWatch(channel).userChanged();
         }
     }
 
@@ -334,14 +322,12 @@ public class InternalDataList
         channel.getAllUsers().remove(user);
         user.getChannelData().remove(channel);
 
-        if (user.getChannelData().size() == 0)
-        {
-           users.remove(user);  
+        if (user.getChannelData().size() == 0) {
+            users.remove(user);
         }
 
-        if (getChannelDataWatch(channel) != null)
-        {
-           getChannelDataWatch(channel).userRemoved(user);
+        if (getChannelDataWatch(channel) != null) {
+            getChannelDataWatch(channel).userRemoved(user);
         }
     }
 }
