@@ -5,7 +5,9 @@ Beta    40 release <unknown>
   (oracel)
 - Support for Unreal IRCD extended whois ('connecting from' & 'using modes')
   (Serge)
-
+- Fix for http://jirc.hick.org/cgi-bin/bitch.cgi/view.html?7013225 (Serge)
+- Fix for http://jirc.hick.org/cgi-bin/bitch.cgi/view.html?7056241 (Serge)
+- Fix for http://jirc.hick.org/cgi-bin/bitch.cgi/view.html?9936279 (Serge)
 
 Beta    39 release 07.30.05
 ====
